# Optimus

./: .gitignore  README.md  client.py  load_config.py  pyproject.toml  server.py
agent/: __init__.py
cli/: cli.py
client/: index.ts  mcpClient.ts  package-lock.json  package.json  tsconfig.json
test/: README.md
