[project]
name = "optimus"
version = "0.0.1"
description = "Optimus MCP Server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.26.0",
    "click>=8.0.0",
]

[project.scripts]
optimus = "cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]